syntax = "proto3";

import "filters.proto";
import "types.proto";

package co.topl.genus.services;

service TransactionsSubscription {
  rpc Create (CreateTxsSubscriptionReq) returns (CreateTxsSubscriptionRes);
  rpc Delete (DeleteTxsSubscriptionReq) returns (DeleteTxsSubscriptionRes);
  rpc Read (stream ReadTxsSubscriptionReq) returns (stream ReadTxsSubscriptionRes);
}

message CreateTxsSubscriptionReq {
  TransactionFilter filter = 1;
  uint64 start_from = 2;
  uint32 confirmation_depth = 3;
}

message CreateTxsSubscriptionRes {
  string subscription_id = 1;
}

message DeleteTxsSubscriptionReq {
  string id = 1;
}

message DeleteTxsSubscriptionRes {}

message ReadTxsSubscriptionReq {
  oneof request_type {
    Start start = 1;
    Checkpoint checkpoint = 2;
    Pause pause = 3;
  }

  message Start {
    string subscription_id = 1;
  }

  message Checkpoint {
    uint64 timestamp = 1;
  }

  message Pause {}
}

message ReadTxsSubscriptionRes {
  Transaction transaction = 1;
}